# cupcake

./: Cargo.toml  README.md  tasks.json
.github/workflows/: build-binaries.yaml  release.yaml
binaries/: cupcake-linux-amd64-v0.0.1.elf  cupcake-linux-amd64-v0.0.10.elf  cupcake-linux-amd64-v0.0.16.elf  cupcake-linux-amd64-v0.0.2.elf  cupcake-linux-amd64-v0.0.20.elf  cupcake-linux-amd64-v0.0.21.elf  cupcake-linux-amd64-v0.0.22.elf  cupcake-linux-amd64-v0.0.23.elf  cupcake-linux-amd64-v0.0.24.elf  cupcake-linux-amd64-v0.0.25.elf  cupcake-linux-amd64-v0.0.4.elf  cupcake-linux-amd64-v0.0.6.elf  cupcake-linux-amd64-v0.0.7.elf  cupcake-linux-amd64-v0.0.8.elf  cupcake-linux-amd64-v0.0.9.elf  cupcake-linux-amd64-v0.1.0.elf  cupcake-macos-arm64-v0.0.1  cupcake-macos-arm64-v0.0.10  cupcake-macos-arm64-v0.0.16  cupcake-macos-arm64-v0.0.2  cupcake-macos-arm64-v0.0.20  cupcake-macos-arm64-v0.0.21  cupcake-macos-arm64-v0.0.22  cupcake-macos-arm64-v0.0.23  cupcake-macos-arm64-v0.0.24  cupcake-macos-arm64-v0.0.25  cupcake-macos-arm64-v0.0.4  cupcake-macos-arm64-v0.0.6  cupcake-macos-arm64-v0.0.7  cupcake-macos-arm64-v0.0.8  cupcake-macos-arm64-v0.0.9  cupcake-macos-arm64-v0.1.0
src/: main.rs
src/model/: downloader.rs  mod.rs  state.rs  task.rs  theme.rs
src/update/: message.rs  mod.rs
src/view/: layout.rs  mod.rs
src/view/components/: action_button.rs  add_task.rs  destination_input_modal.rs  logo.rs  menu.rs  mod.rs  progress_bar.rs  scrollbar.rs  source_input_modal.rs  static_modal.rs  table.rs  tabs.rs  task_table_widget.rs
