[package]
name = "cupcake"
version = "0.0.3"
edition = "2024"
description = "A modern TUI download manager"
authors = ["Mohamed Izhar <mohamed@izhar.xyz>"]
repository = "https://github.com/izhrs/cupcake"
readme = "README.md"
license = "GPL-2.0"
keywords = ["youtube", "download", "tui", "yt-dlp", "video"]
categories = [
    "command-line-utilities",
    "multimedia::video",
    "network-programming",
    "filesystem",
]

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.29.0"
ratatui = "0.29.0"
tui-tree-widget = "0.23.0"
url = "2.5.4"
